First commit (creation jwt tokens)

--- a/projectLibrary/src/main/resources/templates/elementsWeb/element_id.html
+++ b/projectLibrary/src/main/resources/templates/elementsWeb/element_id.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="show_element" method="post">
+<form action="show_element" method="get">
     <div>
         <label>element id</label>
         <input type="number" name="id" placeholder="enter element id"/>
