--- a/projectLibrary/src/main/resources/templates/reader/reader_elements.html
+++ b/projectLibrary/src/main/resources/templates/reader/reader_elements.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="get_elements" method="post">
+<form action="get_elements" method="get">
     <div>
         <label>id</label>
         <input type="number" name="id" placeholder="enter reader id"/>
