--- a/projectLibrary/src/main/resources/templates/elementsWeb/show_status.html
+++ b/projectLibrary/src/main/resources/templates/elementsWeb/show_status.html
@@ -5,7 +5,7 @@
   <title>Title</title>
 </head>
 <body>
-<form action="status_data" method="post">
+<form action="status_data" method="get">
   <div>
     <label>element id</label>
     <input type="number" name="id" placeholder="enter element id"/>
