--- a/projectLibrary/src/main/resources/templates/hello.html
+++ b/projectLibrary/src/main/resources/templates/hello.html
@@ -16,10 +16,10 @@
                 </a>
                 <input type="button"
                        value="log in"
-                       onclick='location.href="/log/new_log_in"' class="btn btn-sm btn-outline-secondary"/>
+                       onclick='location.href="/login"' class="btn btn-sm btn-outline-secondary"/>
                 <input type="button"
                        value="log out"
-                       onclick='location.href="/log/new_log_out "' class="btn btn-sm btn-outline-secondary"/>
+                       onclick='location.href="/logout "' class="btn btn-sm btn-outline-secondary"/>
             </div>
         </div>
     </header>
@@ -72,44 +72,25 @@
         </div>
     </div>
 
-    <div class="row g-5">
-        <div class="col-md-8">
-            <article class="blog-post">
-                <h2 class="blog-post-title mb-1">Sample blog post</h2>
-                <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
-
-                <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
-                <hr>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                <h2>Blockquotes</h2>
-                <p>This is an example blockquote in action:</p>
-                <blockquote class="blockquote">
-                    <p>Quoted text goes here.</p>
-                </blockquote>
-                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-            </article>
-
-
+        <div class="p-4">
+            <h4 class="fst-italic">Стилі</h4>
+            <ol class="list-unstyled mb-0">
+                <li><a href="/elementsWeb/style?style=Science Fiction">Science Fiction</a></li>
+                <li><a href="/elementsWeb/style?style=Science">Science</a></li>
+                <li><a href="/elementsWeb/style?style=Fantasy">Fantasy</a></li>
+            </ol>
         </div>
-
-        <div class="col-md-4">
-            <div class="position-sticky" style="top: 2rem;">
-                <div class="p-4 mb-3 bg-body-tertiary rounded">
-                    <h4 class="fst-italic">Про нас</h4>
-                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
-                </div>
-
-                <div class="p-4">
-                    <h4 class="fst-italic">Стилі</h4>
-                    <ol class="list-unstyled mb-0">
-                        <li><a href="/elementsWeb/style?style=Science Fiction">Science Fiction</a></li>
-                        <li><a href="/elementsWeb/style?style=Science">Science</a></li>
-                        <li><a href="/elementsWeb/style?style=Fantasy">Fantasy</a></li>
-                    </ol>
-                </div>
+    <div class="row g-5">
+        <div class="position-sticky" style="top: 2rem;">
+            <div class="p-4 mb-3 bg-body-tertiary rounded">
+                <h4 class="fst-italic">Про нас</h4>
+                <p class="mb-0">some text</p>
             </div>
+
         </div>
     </div>
+    </div>
+
 
 </main>
 </body>
